# bikebrain

./: .clang_complete  .gitignore  .gitmodules  .vimrc  CMakeLists.txt  configure.sh  edison.cmake  header.sh  source-me-to-fix-build-on-edison
ArduinoEmu/: Arduino.cpp  Arduino.h
bikebrain/: App.cpp  App.h  DataEntry.h  DistanceBasedCadenceReporter.cpp  DistanceBasedCadenceReporter.h  GpsData.h  HttpStatsEngine.cpp  HttpStatsEngine.h  IButton.h  ICadenceReporter.h  IDisplay.h  IDistanceSensor.h  IFont.h  IGpsModule.h  ILedMatrix.h  IStatsEngine.h  ITextDisplay.h  RGB.h  WrappedCFont.cpp  WrappedCFont.h  main.cpp
bikebrain/platform/edison/: Button.cpp  Button.h  Gpio.cpp  Gpio.h  LedMatrix.cpp  LedMatrix.h  MraaCall.h  UltrasonicDistanceSensor.cpp  UltrasonicDistanceSensor.h
bikebrain/platform/emu/: EmuButton.cpp  EmuButton.h  EmuDisplay.cpp  EmuDisplay.h  EmuDistanceSensor.cpp  EmuDistanceSensor.h  EmuGpsModule.cpp  EmuGpsModule.h  EmuLedMatrix.cpp  EmuLedMatrix.h  EmuStatsEngine.cpp  EmuStatsEngine.h  EmuTextDisplay.cpp  EmuTextDisplay.h  StdinReader.cpp  StdinReader.h
